# BISON-WMH

./: BISON_FLAIR.py  BISON_L9.py  CITATION.cff  FLAIR_Label.pkl  README.md  SP_1.mnc  SP_2.mnc  SP_3.mnc  SP_4.mnc  SP_5.mnc  SP_6.mnc  SP_7.mnc  SP_8.mnc  SP_9.mnc  T1_Label.pkl  pyproject.toml
